Pruebas con xSelling y Typhoon

--- a/DMHotels/Info.plist
+++ b/DMHotels/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>TyphoonInitialAssemblies</key>
+    <array>
+        <string>DMHotelsAssembly</string>
+    </array>
 </dict>
 </plist>
